# mantinc

./: LICENSE  Makefile  README.md  pyproject.toml
LICENSES/: CC-BY-SA-4.0.txt
data/: prompts_crosslingual_advanced.yaml  prompts_crosslingual_basic.yaml  prompts_monolingual.yaml  prompts_multi_turn.yaml
lm_eval_tasks/catalan_drift/: catalan_drift.yaml  utils.py
scripts/: build_dataset.py  catalan_drift_eval.py
tests/: test_catalan_drift_checks.py
