[project]
name = "catalan_drift"
version = "0.1.0"
description = "Benchmark for evaluating whether language models keep responding in Catalan."
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "langdetect>=1.0.9",
    "lm-eval[api,litellm]>=0.4.9",
    "openai>=1.93.0",
    "sentencepiece>=0.2.0",
    "torch==2.6.0",
    "transformers>=4.53.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
